2022-06-29/demo_registry/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      volumes:
      - name: local
      containers:
      - name: registry-docker
        image: registry
        volumeMounts: 
        - name: local
          mountPath: /var/lib/registry
        ports:
        - containerPort: 5002
        - containerPort: 6002
        readinessProbe:
          httpGet:
            path: /
            port: 5002
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 5002
          initialDelaySeconds: 30
          timeoutSeconds: 5
# vim: syntax=yaml
