2022-06-29/demo_registry/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: registry
spec:
  entryPoints:
    - http
    - https
  routes:
  - match: HostRegexp(`registry.{domain:.+}`)
    kind: Rule
    services:
    - name: registry
      port: 5002
